RESOLVED FIXED177036
REGRESSION(r221974): [Harfbuzz] Test fast/text/international/hebrew-selection.html is failing since r221974
https://bugs.webkit.org/show_bug.cgi?id=177036
Summary REGRESSION(r221974): [Harfbuzz] Test fast/text/international/hebrew-selection...
Carlos Garcia Campos
Reported 2017-09-16 03:45:45 PDT
I broke rtl text selection in case of composed glyphs.
Attachments
Patch (2.91 KB, patch)
2017-09-17 02:27 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2017-09-17 02:27:19 PDT
Carlos Garcia Campos
Comment 2 2017-09-17 22:22:43 PDT
Radar WebKit Bug Importer
Comment 3 2017-09-27 12:25:18 PDT
Note You need to log in before you can comment on or make changes to this bug.